LL-grammar
1.  <prog> -> DEF ID_FUNC ( <params> ) EOL <statement> END <prog>
2.  <prog> -> EOL <prog>
3.  <prog> -> EOF
4.  <prog> -> <statement> <prog>

5.  <statement> -> IF <expression> THEN EOL <statements> ELSE EOL <statements> END EOL
6.  <statement> -> WHILE <expression> DO EOL <statement> END EOL
7.  <statement> -> PRINT ( <argvs> ) EOL
8.  <statement> -> LENGTH ( <argvs> ) EOL
9.  <statement> -> SUBSTR ( <argvs> ) EOL
10. <statement> -> ORD ( <argvs> ) EOL
11. <statement> -> CHR ( <argvs> ) EOL
12. <statement> -> INPUTS EOL
13. <statement> -> INPUTI EOL
14. <statement> -> INPUTF EOL
15. <statement> -> ID <declare> EOL

16. <declare> -> = ID
17. <declare> -> = <value>
18. <declare> -> = <expression>
19. <declare> -> = ID_FUNC ( <argvs> )
20. <declare> -> ε

21. <params> -> ID <param>
22. <params> -> ε

23. <param> , ID <param>
24. <param> -> ε

25. <argvs> -> <value> <arg>
26. <argvs> -> ε

27. <arg> -> , <value> <arg>
28. <arg> -> ε

29. <value> -> INT_VALUE
30. <value> -> FLOAT_VALUE
31. <value> -> STRING_VALUE
